fix encoding problems (utf-8)